fixes white gap

--- a/src/blocks/video-maxi/style.scss
+++ b/src/blocks/video-maxi/style.scss
@@ -26,6 +26,8 @@
 		align-items: center;
 		justify-content: center;
 		width: 100%;
+		margin: -1px;
+
 		&--popup {
 			width: 50%;
 			&--zoom-out {
@@ -41,7 +43,6 @@
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-		margin: 1px;
 	}
 
 	&__overlay {
